--- a/src/app/components/window/window.component.html
+++ b/src/app/components/window/window.component.html
@@ -3,9 +3,9 @@
   <div class=" absolute w-screen h-screen  snap-start" [style.padding]="tileService.state().paddingVertical + 'px ' + tileService.state().paddingHorizontal + 'px'">
     <div class="relative boundary w-full h-full rounded-2xl flex flex-row flex-wrap bg-gray-100">
         @for(item of arrangService.tiles(); track $index) {
-          <div cdkDrag cdkDragBoundary = ".boundary"  [cdkDragFreeDragPosition]="item.position" (cdkDragStarted)="onDragStart(item.index)"  (cdkDragReleased)="onRelease($event , $index, item.index , item.type)"  [style.width.px]="getTileSize(item.type).width" [style.height.px]="getTileSize(item.type).height" class="absolute  rounded-2xl  p-1" >
+          <div cdkDrag cdkDragBoundary = ".boundary"  [cdkDragStartDelay]="600" [cdkDragFreeDragPosition]="item.position" (cdkDragStarted)="onDragStart(item.index)"  (cdkDragReleased)="onRelease($event , $index, item.index , item.type)" [style.z-index]="item.zIndex" [style.width.px]="getTileSize(item.type).width" [style.height.px]="getTileSize(item.type).height" class="absolute rounded-2xl  p-1 z-0 " >
 <!--            directive will be here  -->
-            <div class="w-full h-full bg-emerald-300 rounded-2xl"></div>
+            <div  (mousedown)="onMouseDown($event , $index)" (mouseup)="onMouseUp($event , $index)" class="w-full h-full bg-emerald-300 rounded-2xl outline-1"></div>
           </div>
         }
 
