--- a/src/app/components/window/window.component.html
+++ b/src/app/components/window/window.component.html
@@ -1,24 +1,33 @@
-
+<div class="w-screen h-screen">
 <div class="relative w-screen h-screen  overflow-x-auto snap-x snap-mandatory scroll-smooth scrollwidth" id="xWindow" >
-  <div class=" absolute w-screen h-screen  snap-start" [style.padding]="tileService.state().paddingVertical + 'px ' + tileService.state().paddingHorizontal + 'px'">
-    <div class="relative boundary w-full h-full rounded-2xl flex flex-row flex-wrap bg-gray-100">
-        @for(item of arrangService.tiles(); track $index) {
-          <div cdkDrag cdkDragBoundary = ".boundary"  [cdkDragStartDelay]="600" [cdkDragFreeDragPosition]="item.position" (cdkDragStarted)="onDragStart(item.index)"  (cdkDragReleased)="onRelease($event , $index, item.index , item.type)" [style.z-index]="item.zIndex" [style.width.px]="getTileSize(item.type).width" [style.height.px]="getTileSize(item.type).height" class="absolute rounded-2xl  p-1 z-0 " >
-<!--            directive will be here  -->
-            <div  (mousedown)="onMouseDown($event , $index)" (mouseup)="onMouseUp($event , $index)" class="w-full h-full bg-emerald-300 rounded-2xl outline-1"></div>
+
+  @for(window_ of arrangService.displayTiles() ; let  outerIndex = $index ; track outerIndex){
+    <div class=" absolute w-screen h-screen  snap-start" [style.padding]="tileService.state().paddingVertical + 'px ' + tileService.state().paddingHorizontal + 'px'" [style.left.%]="getLeftPosition(outerIndex)">
+      <div class="relative boundary w-full h-full rounded-2xl flex flex-row flex-wrap bg-gray-100 outline-1 outline-offset-4 outline-gray-200">
+        @for(item of window_ ; track  $index) {
+          <div cdkDrag cdkDragBoundary = ".boundary"  [cdkDragStartDelay]="600" [cdkDragFreeDragPosition]="item.position" (cdkDragStarted)="onDragStart(item.index , outerIndex)"  (cdkDragReleased)="onRelease($event , $index, item.index , item.type , outerIndex)" [style.z-index]="item.zIndex" [style.width.px]="getTileSize(item.type).width" [style.height.px]="getTileSize(item.type).height" class="absolute rounded-2xl  p-1 z-0 " >
+            <!--            directive will be here  -->
+            <div (touchstart)="onMouseDown($event , outerIndex , $index)" (touchend)="onMouseUp($event , outerIndex , $index)"  (mousedown)="onMouseDown($event , outerIndex , $index)" (mouseup)="onMouseUp($event , outerIndex , $index)" class="w-full h-full bg-emerald-300 rounded-2xl outline-1"></div>
           </div>
         }
-
-
+      </div>
     </div>
-  </div>
-  <div class="absolute w-screen h-screen p-10 snap-start" style="left: 100%">
-    <div class="w-full h-full rounded-2xl outline-black outline-2">
+  }
 
-    </div>
-  </div>
+
+
+
 
 
 </div>
+  <div class="absolute w-full h-[40px] bottom-0 flex flex-row justify-center items-center gap-2">
 
-
+    @for(dot of Array(arrangService.displayTiles().length).fill(0) ; track $index){
+      @if($index == tileService.currentWindow()){
+        <div class="w-[15px] h-[15px] rounded-full bg-green-300 pop"></div>
+      } @else {
+        <div class="w-[15px] h-[15px] rounded-full bg-gray-200 non-pop"></div>
+      }
+    }
+  </div>
+</div>
