--- a/src/app/tiles/profile-tile/profile-tile.component.html
+++ b/src/app/tiles/profile-tile/profile-tile.component.html
@@ -1,3 +1,3 @@
-<div class="w-full h-full" (click)="this.router.navigate(['/profile'])">
+<div class="w-full h-full" (dblclick)="this.router.navigate(['/profile'])">
   <img class="rounded-2xl" src="./images/profile_pic.png" />
 </div>
