--- a/src/app/components/window/window.component.html
+++ b/src/app/components/window/window.component.html
@@ -1,16 +1,21 @@
 <div class="w-screen h-screen">
+  <div class="absolute w-screen h-screen top-0 left-0">
+    <img class="w-full h-full object-cover" src="./images/plant.webp"/>
+  </div>
 <div class="relative w-screen h-screen  overflow-x-auto snap-x snap-mandatory scroll-smooth scrollwidth" id="xWindow" >
-
   @for(window_ of arrangService.displayTiles() ; let  outerIndex = $index ; track outerIndex){
     <div class=" absolute w-screen h-screen  snap-start" [style.padding]="tileService.state().paddingVertical + 'px ' + tileService.state().paddingHorizontal + 'px'" [style.left.%]="getLeftPosition(outerIndex)">
-      <div class="relative boundary w-full h-full rounded-2xl flex flex-row flex-wrap bg-gray-100 outline-1 outline-offset-4 outline-gray-200">
+
+      <div class="relative boundary w-full h-full rounded-2xl flex flex-row flex-wrap">
+        <div class="absolute w-full h-full bg-gray-50 opacity-40 rounded-2xl"> </div>
         @for(item of window_ ; track  $index) {
           <div cdkDrag cdkDragBoundary = ".boundary"  [cdkDragStartDelay]="600" [cdkDragFreeDragPosition]="item.position" (cdkDragStarted)="onDragStart(item.index , outerIndex)"  (cdkDragReleased)="onRelease($event , $index, item.index , item.type , outerIndex)" [style.z-index]="item.zIndex" [style.width.px]="getTileSize(item.type).width" [style.height.px]="getTileSize(item.type).height" class="absolute rounded-2xl  p-1 z-0 " >
             <!--            directive will be here  -->
             <div [id]="getId($index)" (touchstart)="onMouseDown(getId($index), outerIndex , $index)" (touchend)="onMouseUp(getId($index) , outerIndex , $index)"  (mousedown)="onMouseDown(getId($index) , outerIndex , $index)" (mouseup)="onMouseUp(getId($index) , outerIndex , $index)" class="w-full h-full p-1 rounded-2xl ">
 
-              <div class="w-full h-full">
-                <ng-template appDynamicLoader [component]="item.component"></ng-template>
+              <div class="w-full h-full shadow-custom rounded-2xl">
+
+                <ng-template appDynamicLoader [component]="item.component" [Data]="item.data" ></ng-template>
               </div>
             </div>
           </div>
