--- a/src/app/components/big-certificate/big-certificate.component.html
+++ b/src/app/components/big-certificate/big-certificate.component.html
@@ -1,1 +1,3 @@
-<p>big-certificate works!</p>
+<div class="w-screen h-screen flex justify-center items-center">
+  <img id="certificate" class="md:w-[60%] lg:w-[50%] w-[80%] outline-2 outline-offset-4 rounded-2xl " [src]="preferService.certificate()">
+</div>
