--- a/src/app/tiles/big-info/big-info.component.html
+++ b/src/app/tiles/big-info/big-info.component.html
@@ -1,4 +1,5 @@
-<div class="relative w-full h-full bg-amber-100 rounded-2xl">
-  <img width="30" height="30" class="absolute top-2 right-2" src="https://img.icons8.com/pieces/64/pin.png" alt="pin"/>
-  <p>{{Data}}</p>
+<div  class="relative w-full h-full bg-amber-100 rounded-2xl">
+<!--  <img width="30" height="30" class="absolute top-2 right-2" src="https://img.icons8.com/pieces/64/pin.png" alt="pin"/>-->
+<!--  <p>{{Data}}</p>-->
+
 </div>
