--- a/src/app/tiles/info/info.component.html
+++ b/src/app/tiles/info/info.component.html
@@ -1,1 +1,4 @@
-<div class="w-full h-full cursor-pointer bg-blue-300 flex justify-center items-center lg:text-2xl md:text-2xl text-[16px] text-center rounded-2xl nanum-pen-script-regular {{Data.color}}">{{Data.msg}}</div>
+<div class="w-ful p-2 h-full cursor-pointer bg-blue-300 flex flex-col justify-center items-center lg:text-2xl md:text-2xl text-[16px] text-center rounded-2xl nanum-pen-script-regular {{Data.color}}">
+  <div [id] ='this.id'></div>
+  <button class="absolute w-full bottom-1 text-center" (click)="addDialogs(['Are you up for 1 on 1 Tick Tac Toe'])">Test</button>
+</div>
