--- a/src/app/tiles/quote/quote.component.html
+++ b/src/app/tiles/quote/quote.component.html
@@ -1,4 +1,5 @@
-<div class="relative w-full h-full flex flex-col justify-start lg:pt-5 cursor-pointer items-center p-1 bg-amber-200 rounded-2xl">
+<div class="relative w-full h-full flex flex-col justify-start lg:pt-5 cursor-pointer items-center p-1 rounded-2xl">
   <p class="w-full text-center md:text-2xl ld:text-2xl text-[15px] nanum-pen-script-regular ">{{quote.content}}</p>
-  <p class="absolute bottom-0 right-2 md:text-2xl ld:text-2xl text-[15px] nanum-pen-script-regular">-{{quote.author}}</p>
+  <img class="absolute top-0 left-0 w-full h-full object-cover -z-10 rounded-2xl" src="./images/quotebg.png">
+  <p class="absolute bottom-0 right-2 md:text-2xl ld:text-2xl text-[15px] text-red-500 nanum-pen-script-regular">-{{quote.author}}</p>
 </div>
