--- a/src/app/tiles/big-info/big-info.component.html
+++ b/src/app/tiles/big-info/big-info.component.html
@@ -1,5 +1,9 @@
-<div  class="relative w-full h-full bg-amber-100 rounded-2xl">
-<!--  <img width="30" height="30" class="absolute top-2 right-2" src="https://img.icons8.com/pieces/64/pin.png" alt="pin"/>-->
-<!--  <p>{{Data}}</p>-->
+<div  class="relative w-full h-full rounded p-2">
+
+    <div class="text-4xl bottom-2 text-green-400 w-full h-full flex flex-col justify-center items-center text-center silkscreen-bold  shadow-text">
+    Hi, I am Adarsha Kiran Khadka
+
+    </div>
+
 
 </div>
