--- a/src/app/tiles/tetris/tetris.component.html
+++ b/src/app/tiles/tetris/tetris.component.html
@@ -1,4 +1,4 @@
 
-<div (dblclick)="this.route.navigate(['/tetris'])" class="w-full h-full shadow-xs rounded-2xl p-2  bg-blue-300 ">
-  <img  src="./images/tetris.png" class="w-full h-full" />
+<div (dblclick)="this.route.navigate(['/tetris'])" class="w-full h-full  p-2 bg-gray-100 rounded-2xl shadow  ">
+  <img class="w-full h-full" src="https://img.icons8.com/cotton/128/tetris-game-console.png" alt="tetris-game-console"/>
 </div>
