--- a/src/app/components/window/window.component.html
+++ b/src/app/components/window/window.component.html
@@ -1,50 +1,74 @@
-<div class="w-screen h-screen">
-  <div class="absolute w-screen h-screen top-0 left-0">
+<div class="relative w-[screen] h-screen">
+  <div class="absolute w-screen h-screen top-0 left-0  ">
     <img class="w-full h-full object-cover" src="./images/god.png"/>
   </div>
 
 <div class="relative w-screen h-screen  overflow-x-auto snap-x snap-mandatory scroll-smooth scrollwidth" id="xWindow" >
-  @if(rerender >=0){
+
   @for(window_ of arrangService.displayTiles() ; let  outerIndex = $index ; track outerIndex){
-    <div class=" absolute w-screen h-screen  snap-start" [style.padding]="tileService.state().paddingVertical + 'px ' + tileService.state().paddingHorizontal + 'px'" [style.left.%]="getLeftPosition(outerIndex)">
+    <div [id]="rerender()" class=" absolute w-screen h-screen   snap-start" [style.padding]="tileService.state().paddingVertical + 'px ' + tileService.state().paddingHorizontal + 'px'" [style.left.%]="getLeftPosition(outerIndex)">
 
       <div class="relative boundary w-full h-full rounded-2xl flex flex-row flex-wrap">
-        <div class="absolute w-full h-full bg-gray-50 opacity-40 rounded-2xl"> </div>
+        <div class="absolute w-full h-full  outline-2 outline-offset-10 outline-amber-300 rounded-2xl"> </div>
+        <div class="absolute w-full h-full backdrop-blur-xs grayscale-100 opacity-70 rounded-2xl"> </div>
         @for(item of window_ ; track  $index) {
-          <div cdkDrag cdkDragBoundary = ".boundary"  [cdkDragStartDelay]="600" [cdkDragFreeDragPosition]="item.position" (cdkDragStarted)="onDragStart(item.index , outerIndex)"  (cdkDragReleased)="onRelease($event , $index, item.index , item.type , outerIndex)" [style.z-index]="item.zIndex" [style.width.px]="getTileSize(item.type).width" [style.height.px]="getTileSize(item.type).height" class="absolute rounded-2xl  p-1 z-0 " >
-            <!--            directive will be here  -->
+          <div cdkDrag cdkDragBoundary = ".boundary"  [cdkDragStartDelay]="600" [cdkDragFreeDragPosition]="item.position" (cdkDragStarted)="onDragStart(item.index , outerIndex)"  (cdkDragReleased)="onRelease($event , $index, item.index , item.type , outerIndex)" [style.z-index]="item.zIndex" [style.width.px]="getTileSize(item.type , item.name).width" [style.height.px]="getTileSize(item.type , item.name).height" class="absolute rounded-2xl  p-1 z-0 " >
+
             <div [id]="getId($index)" (touchstart)="onMouseDown(getId($index), outerIndex , $index)" (touchend)="onMouseUp(getId($index) , outerIndex , $index)"  (mousedown)="onMouseDown(getId($index) , outerIndex , $index)" (mouseup)="onMouseUp(getId($index) , outerIndex , $index)" class="w-full h-full p-1 rounded-2xl ">
 
-              <div class="relative w-full h-full  rounded-2xl p-1">
-                <div class="cus-shadow w-full h-full rounded-2xl">
-                  <ng-template appDynamicLoader [component]="item.component" [Data]="item.data" ></ng-template>
+              <div class="relative w-full h-full p-1 hover:scale-110 duration-75">
+                <div id="{{item.name}}"  class=" w-full h-full duration-100 ">
+                    <ng-template  appDynamicLoader [component]="item.component" [Data]="item.data" [tests]="this.rerender()" ></ng-template>
                 </div>
 
-                <div class="absolute -bottom-5 w-full text-center font-bold capitalize text-amber-300 shadow-text rounded">Quote</div>
+                <div class="absolute md:-bottom-3.5 -bottom-2.5 w-full text-center text-[10px] sm:text-sm md:text-xs lg:text-sm font-bold capitalize text-amber-400 shadow-text rounded silkscreen-bold">{{item.name}}</div>
               </div>
             </div>
           </div>
         }
       </div>
     </div>
+
   }
-  }
-
-
-
-
 
 
 
 </div>
+
   <div class="absolute w-full h-[40px] bottom-0 flex flex-row justify-center items-center gap-2">
 
     @for(dot of Array(arrangService.displayTiles().length).fill(0) ; track $index){
       @if($index == tileService.currentWindow()){
-        <div class="w-[15px] h-[15px] rounded-full bg-green-300 pop"></div>
+        <div class="w-[10px] h-[10px] md:w-[18px] md:h-[18px] rounded-full bg-green-300 pop"></div>
       } @else {
-        <div class="w-[15px] h-[15px] rounded-full bg-gray-200 non-pop"></div>
+        <div class="w-[8px] h-[8px] md:w-[15px] md:h-[15px] rounded-full bg-gray-200 non-pop"></div>
       }
     }
   </div>
+
+
+
+@if(popService.visible()){
+  <div class="absolute top-0 left-0 w-full h-full backdrop-blur-sm z-10 flex justify-center items-center">
+
+    <div class=" w-[98%] h-[90%] md:w-[80%] lg:w-[60%] flex flex-col gap-0.5  rounded z-10">
+      <div (click)="popService.visible.set(false)" class="w-full h-[50px] bg-red-400 px-4 rounded silkscreen-bold cursor-pointer flex items-center outline ">
+        <span class="hover:scale-125 duration-75 hover:text-white shadow-text">x</span>
+      </div>
+      <div class="w-full h-full ">
+        <app-setting/>
+      </div>
+    </div>
+
+    @if(popService.affer()){
+      <div class="absolute top-5 right-3 px-2 h-[50px] rounded z-20 outline bg-pink-400  flex justify-center items-center slideAnimation text-white shadow-text silkscreen-bold">{{popService.message()}}</div>
+    }
+  </div>
+}
+
+
+
+
+
+
 </div>
