--- a/src/app/tiles/calender/calender.component.html
+++ b/src/app/tiles/calender/calender.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full bg-white rounded-2xl overflow-hidden cursor-pointer shadow-md select-none">
-  <div class="w-full text-center font-bold p-2 bg-red-400 text-white" [style.font-size.px]="fontSize(dateType.month)" >{{month|toMonth}}</div>
-  <p class="w-full h-full text-center font-medium text-gray-700" [style.font-size.px]="fontSize(dateType.day)" >{{day}}</p>
+<div class="w-full h-full bg-white rounded-xl md:rounded-2xl overflow-hidden cursor-pointer shadow-md select-none">
+  <div class="w-full text-center font-bold pt-1 md:pt-0 bg-red-400 text-white" [style.font-size.px]="fontSize(dateType.month)" >{{month|toMonth}}</div>
+  <p class="w-full h-full text-center font-bold text-gray-700" [style.font-size.px]="fontSize(dateType.day)" >{{day}}</p>
 </div>
