--- a/src/app/tiles/info/info.component.html
+++ b/src/app/tiles/info/info.component.html
@@ -1,4 +1,5 @@
-<div class="w-ful p-2 h-full cursor-pointer bg-blue-300 flex flex-col justify-center items-center lg:text-2xl md:text-2xl text-[16px] text-center rounded-2xl nanum-pen-script-regular {{Data.color}}">
-  <div [id] ='this.id'></div>
-  <button class="absolute w-full bottom-1 text-center" (click)="addDialogs(['Are you up for 1 on 1 Tick Tac Toe'])">Test</button>
+<div class="w-ful p-2 h-full cursor-pointer  flex flex-col justify-center items-center lg:text-2xl md:text-2xl text-[16px] text-center  rounded-2xl hover:outline-2 ">
+  <div class="lg:text-4xl md:text-3xl overflow-scroll scrollwidth   text-2xl bottom-2 {{color}} rounded-xl md:rounded-2xl break-words w-full h-full flex flex-col justify-center items-center text-center silkscreen-bold  shadow-text">
+    <p class="break-words w-full  items-center ">{{value}}</p>
+  </div>
 </div>
