--- a/src/app/tiles/profile-tile/profile-tile.component.html
+++ b/src/app/tiles/profile-tile/profile-tile.component.html
@@ -1,6 +1,3 @@
-<div id="parallax" class="w-full h-full transform-3d bg-white shadow-custom rounded-2xl flex justify-center items-center" (dblclick)="this.router.navigate(['/profile'])">
-
+<div id="parallax" class="w-full h-full transform-3d hover:bg-amber-50  rounded flex justify-center items-center" (dblclick)="this.router.navigate(['/'])">
     <img class="rounded-2xl drop-custom-shadow  transform-3d transform duration-100 hover:translate-z-[50px] hover:scale-125" src="./images/profile_pic.png" />
-
-
 </div>
