--- a/src/app/tiles/tic-tac-toe/tic-tac-toe.component.html
+++ b/src/app/tiles/tic-tac-toe/tic-tac-toe.component.html
@@ -1,3 +1,4 @@
-<div (dblclick)="this.route.navigate(['/tictactoe'])" class="w-full h-full shadow-xs rounded-2xl bg-gray-800">
-  <img  src="./images/tic-tac-toe.png" class="w-full h-full" />
+<div (dblclick)="this.route.navigate(['/tictactoe'])" class="w-full h-full  rounded-xl">
+  <img class="w-full h-full bg-black rounded-2xl" src="./images/tic-tac-toe.png"/>
+
 </div>
